# pawabot

./: .cookiecutterrc  .copier-answers.yml  .cruft.json  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  coverage.ini  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/: conf.py  index.md  spelling_wordlist.txt
docs/reference/: cli.md
scripts/: check-docs-spelling.sh  gen-readme-data.py  update-spelling-wordlist.sh
scripts/templates/: CREDITS.md  README.md
src/pawabot/: __init__.py  __main__.py  callbacks.py  cli.py  database.py  privileges.py  torrents.py  utils.py
tests/: __init__.py  test_cli.py
